feat: add TV remote floating mode and status bar
- TV remote can float as a draggable overlay above all tabs via portal
- Add zoom in/out controls for the floating remote
- Add status bar showing top activity, device model, IP, and Android version
- Add getTopActivity IPC to fetch current foreground activity

--- a/src/common/langs/ar.json
+++ b/src/common/langs/ar.json
@@ -115,5 +115,20 @@
   "deviceRefreshed": "تم تحديث الجهاو",
   "ipAddress": "IP عوان الـ",
   "macAddress": "MAC عنوان الـ",
-  "signature": "التوقيع"
+  "signature": "التوقيع",
+  "tvRemote": "جهاز التحكم عن بعد",
+  "mute": "كتم الصوت",
+  "playPause": "تشغيل/إيقاف",
+  "stop": "إيقاف",
+  "menu": "القائمة",
+  "guide": "الدليل",
+  "tvInput": "الإدخال",
+  "settings": "الإعدادات",
+  "channelUp": "القناة التالية",
+  "channelDown": "القناة السابقة",
+  "rewind": "ترجيع",
+  "fastForward": "تقديم سريع",
+  "previous": "السابق",
+  "next": "التالي",
+  "float": "عائم"
 }
