--- a/src/common/langs/ru.json
+++ b/src/common/langs/ru.json
@@ -215,5 +215,20 @@
   "pairingCode": "Код сопряжения",
   "enabled": "Включено",
   "disabled": "Отключено",
-  "storageUsage": "Использование хранилища"
+  "storageUsage": "Использование хранилища",
+  "tvRemote": "ТВ-пульт",
+  "mute": "Без звука",
+  "playPause": "Воспроизведение/Пауза",
+  "stop": "Стоп",
+  "menu": "Меню",
+  "guide": "Программа передач",
+  "tvInput": "Вход",
+  "settings": "Настройки",
+  "channelUp": "Канал вверх",
+  "channelDown": "Канал вниз",
+  "rewind": "Перемотка назад",
+  "fastForward": "Перемотка вперёд",
+  "previous": "Предыдущий",
+  "next": "Следующий",
+  "float": "Плавающее"
 }
