--- a/src/common/langs/zh-CN.json
+++ b/src/common/langs/zh-CN.json
@@ -177,5 +177,20 @@
   "source": "源",
   "destination": "目标",
   "duration": "时长",
-  "preview": "预览"
+  "preview": "预览",
+  "tvRemote": "TV 遥控器",
+  "mute": "静音",
+  "playPause": "播放/暂停",
+  "stop": "停止",
+  "menu": "菜单",
+  "guide": "节目指南",
+  "tvInput": "输入源",
+  "settings": "设置",
+  "channelUp": "频道+",
+  "channelDown": "频道-",
+  "rewind": "快退",
+  "fastForward": "快进",
+  "previous": "上一个",
+  "next": "下一个",
+  "float": "悬浮"
 }
