--- a/src/common/langs/zh-TW.json
+++ b/src/common/langs/zh-TW.json
@@ -212,5 +212,20 @@
   "adbServerRestarted": "ADB 服務已重啟",
   "pair": "配對",
   "pairDevice": "通過 Wi-Fi 配對新設備",
-  "pairingCode": "配對碼"
+  "pairingCode": "配對碼",
+  "tvRemote": "TV 遙控器",
+  "mute": "靜音",
+  "playPause": "播放/暫停",
+  "stop": "停止",
+  "menu": "選單",
+  "guide": "節目指南",
+  "tvInput": "輸入源",
+  "settings": "設定",
+  "channelUp": "頻道+",
+  "channelDown": "頻道-",
+  "rewind": "快退",
+  "fastForward": "快進",
+  "previous": "上一個",
+  "next": "下一個",
+  "float": "懸浮"
 }
