feat: add logcat keyword filter and status bar app actions
- Add keyword filter to logcat toolbar, matches message and tag
- Filter clears screen first, then progressively re-appends matching
  entries in batches via requestAnimationFrame
- Typing a new keyword cancels any in-progress refilter
- Add clear cache and restart buttons to status bar for current
  foreground app

--- a/src/common/langs/ar.json
+++ b/src/common/langs/ar.json
@@ -130,5 +130,6 @@
   "fastForward": "تقديم سريع",
   "previous": "السابق",
   "next": "التالي",
-  "float": "عائم"
+  "float": "عائم",
+  "keyword": "كلمة مفتاحية"
 }
