--- a/src/common/langs/pt.json
+++ b/src/common/langs/pt.json
@@ -229,5 +229,6 @@
   "fastForward": "Avançar",
   "previous": "Anterior",
   "next": "Próximo",
-  "float": "Flutuante"
+  "float": "Flutuante",
+  "keyword": "Palavra-chave"
 }
