--- a/src/common/langs/ru.json
+++ b/src/common/langs/ru.json
@@ -230,5 +230,6 @@
   "fastForward": "Перемотка вперёд",
   "previous": "Предыдущий",
   "next": "Следующий",
-  "float": "Плавающее"
+  "float": "Плавающее",
+  "keyword": "Ключевое слово"
 }
