--- a/src/common/langs/tr.json
+++ b/src/common/langs/tr.json
@@ -229,5 +229,6 @@
   "fastForward": "İleri Sar",
   "previous": "Önceki",
   "next": "Sonraki",
-  "float": "Yüzen"
+  "float": "Yüzen",
+  "keyword": "Anahtar kelime"
 }
